--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+.nav a {
+  color: white;
+}
+
+.nav a:hover{
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.8);
+}
